[SPLUNK] Not found error replaced with detailed error

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -40,7 +40,17 @@
             "do_fetch: failed",
             "failed with exit code",
             "not available",
-            "not found",
+            ".git not found",
+            "error 404: not found",
+            "identifier not found",
+            "error: file not found",
+            "command not found",
+            "hddlunite not found",
+            "not found in archive",
+            "file/directory not found",
+            "not found in packages",
+            "image was not found",
+            ".exe\" not found",
             "no such property",
             "couldn't find",
             "fatal:",
@@ -57,6 +67,7 @@
             "abiexception",
             "java.io.ioexception",
             "java.lang.exception",
+            "http error 404",
             "this is a comment to segmentized common error type to be used for different error category - compilation error type",
             "no rule to make target",
             "script returned exit code 1",
@@ -85,7 +96,8 @@
             "traceback (most recent call last):",
             "gitlab error",
             "error is not recoverable",
-            "hsdes id is not given"
+            "hsdes id is not given",
+            "kwinject: not found"
         ],
         
         "error_category": {
@@ -169,7 +181,6 @@
             "error: please check bblayers": "Compilation Error",
             "error in running process": "Compilation Error",
             "command not found": "Compilation Error",
-            "file not found": "Compilation Error",
             "error 1": "Compilation Error",
             "error 2": "Compilation Error",
             "recipe for target": "Compilation Error",
@@ -192,7 +203,6 @@
             "tar.gz: not found in archive": "Compilation Error",
             "file/directory not found in workspace": "Compilation Error",
             "not found in packages path": "Compilation Error",
-            "previous ipdb not found, fall back to full compilation": "Compilation Error",
             "fatal: remote upstream already exists": "Compilation Error",
             "patch failed": "Compilation Error",
             "execution is failed (exit code: 1)": "Compilation Error",
@@ -200,6 +210,8 @@
             "daily build: failed": "Compilation Error",
             "error: cannot fetch": "Compilation Error",
             "traceback (most recent call last):": "Compilation Error",
+            "error 404: not found": "Compilation Error",
+            "http error 404 client error: not found for url": "Compilation Error",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Git Related Error",
             "gitlab error": "Application Error: Git",
@@ -210,7 +222,7 @@
             "gitlab is not responding": "Connectivity Error: Git",
             "authentication failed for 'https://gitlab": "Connectivity Error: Git",
             "remote: unauthorized":"Configuration Error: Git",
-            "error cloning": "Connectivity Error: Git",
+            "fatal: repository": "Connectivity Error: Git",
             "git clone": "Connectivity Error: Git",
             "cloning the git-repo": "Connectivity Error: Git",
             "error: failed to push some refs to": "Connectivity Error: Git",
@@ -272,6 +284,7 @@
             "error occurred during build: c/c++ defects detection stage failed": "Application Error: Klocwork",
             "error occurred during build: the server project configuration": "Application Error: Klocwork",
             "[error] error occurred during build: connection to https://klocwork": "Connectivity Error: Klocwork",
+            "kwinject: not found": "Application Error: Klocwork",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Jenkins Related Error",
             "couldn't find any revision to build": "Configuration Error: Jenkins",
@@ -377,10 +390,6 @@
             "../../sources/",
             "note: tasks summary:",
             "head is now at",
-            "not found modules for:",
-            "not found deltainfo for:",
-            "not found updateinfo for:",
-            "not found other for:",
             "applying:",
             "opencv.patch",
             "currror.c.o",
@@ -410,29 +419,18 @@
             "v2020.07 release",
             "pthread_create",
             "build plugin documentation",
-            "bc: not found",
             "server log for this session",
             "local header:",
             "basegpiocheckconflictlib",
             "xlink_secure_err",
-            "not found (optional)",
-            "mcafee antivirus defination not found",
-            "symbol '__alt_data_end' not found in nm-output",
-            "_dir not found setting to default",
-            "libraries and headers were not found",
             "package '",
             "conflict.c",
             "caused: java.io.ioexception",
             "conflicts between attempted install",
-            "looking for pthread.h - not found",
             "conflicting requests",
             "conflict (modify/delete):",
-            ". . . no (",
-            ".h not found",
-            "openembedded-core not found",
             "stderr_console.",
             "/makefile:",
-            "curl: (22) the requested url returned error: 404 not found",
             "error: script returned exit code 1"
         ]
     }
