--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -329,7 +329,7 @@
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "HSDES Related Error",
             "keyerror:": "Application Error: HSDES",
             "fail to update hsdes field": "Application Error: HSDES",
-            "hsdes id is not given": "Application Error: HSDES",
+            "hsdes id is not given": "Configuration Error: HSDES",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "ABI Related Error",
             "abi_warning:": "Application Error: ABI",
