[SPLUNK] Protex keyword updated after refactoring the script

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -82,7 +82,8 @@
             "build failed",
             "this is a comment to segmentized common error type to be used for different error category - application error type",
             "[error] kwadmin:",
-            "other error:",
+            "[protex] other error:",
+            "[protex] syntax error:",
             "server error",
             "connection error sending email",
             "results is not yet ready",
