--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -279,10 +279,11 @@
             "source list is empty": "Configuration Error: Klocwork",
             "kwadmin: authentication failed": "Configuration Error: Klocwork",
             "rt.jar: error reading zip file": "Connectivity Error: Klocwork",
-            "error occurred during build: c/c++ defects detection stage failed": "Application Error: Klocwork",
-            "error occurred during build: the server project configuration": "Application Error: Klocwork",
-            "[error] error occurred during build: connection to https://klocwork": "Connectivity Error: Klocwork",
+            "error occurred during build: c/c++ defects detection stage failed": "Configuration Error: Klocwork",
+            "error occurred during build: the server project configuration": "Configuration Error: Klocwork",
+            "error occurred during build: connection to https://klocwork": "Connectivity Error: Klocwork",
             "kwinject: not found": "Application Error: Klocwork",
+            "error occurred during build: could not connect to https://klocwork": "Connectivity Error: Klocwork",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Jenkins Related Error",
             "couldn't find any revision to build": "Configuration Error: Jenkins",
