Protex first level entry updated

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -82,8 +82,7 @@
             "build failed",
             "this is a comment to segmentized common error type to be used for different error category - application error type",
             "[error] kwadmin:",
-            "[protex] other error:",
-            "[protex] syntax error:",
+            "[protex] error:",
             "server error",
             "connection error sending email",
             "results is not yet ready",
