Protex error category updated

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -314,9 +314,9 @@
             "bdstool: login failed for": "Connectivity Error: Protex",
             "bom list error": "Application Error: Protex",
             "bdstool: command failed:": "Application Error: Protex",
-            "error: protex project name": "Configuration Error: Protex",
-            "other error: authenticated ****@intel.com on": "Application Error: Protex",
-            "[protex] other error: ignore list": "Configuration Error: Protex",
+            "[protex] error: protex project name": "Configuration Error: Protex",
+            "[protex] error: authenticated ****@intel.com on": "Application Error: Protex",
+            "[protex] error: ignore list": "Configuration Error: Protex",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "SNYK Related Error",
             "internal error (reference:": "Application Error: Snyk",
