Protex error category modified

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -82,7 +82,7 @@
             "build failed",
             "this is a comment to segmentized common error type to be used for different error category - application error type",
             "[error] kwadmin:",
-            "[protex] error:",
+            "[protex] [error]",
             "server error",
             "connection error sending email",
             "results is not yet ready",
@@ -315,9 +315,9 @@
             "bom list error": "Application Error: Protex",
             "bdstool: command failed:": "Application Error: Protex",
             "protex project name": "Configuration Error: Protex",
-            "[protex] error: other - authenticated ****@intel.com on": "Application Error: Protex",
-            "[protex] error: other - ignore list": "Configuration Error: Protex",
-            "[protex] error: syntax": "Configuration Error: Protex",
+            "[protex] [error] other: authenticated ****@intel.com on": "Application Error: Protex",
+            "[protex] [error] other: ignore list": "Configuration Error: Protex",
+            "[protex] [error] syntax:": "Configuration Error: Protex",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "SNYK Related Error",
             "internal error (reference:": "Application Error: Snyk",
