[SPLUNK] Misc error pattern added to ignore for KW

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -434,7 +434,8 @@
             "stderr_console.",
             "/makefile:",
             "error: script returned exit code 1",
-            "java.io.ioexception: could not checkout"
+            "java.io.ioexception: could not checkout",
+            "warn : problem with id"
         ]
     }
 }
