[Splunk] BDBA Error first level changed after code refactoring

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -56,8 +56,6 @@
             "does not exist",
             "there are no nodes",
             "not recognized",
-            "httperror",
-            "urlerror",
             "conflict",
             "cannot stat",
             "test result",
@@ -83,6 +81,7 @@
             "this is a comment to segmentized common error type to be used for different error category - application error type",
             "[klocwork] [error]",
             "[protex] [error]",
+            "[bdba] [error]",
             "server error",
             "connection error sending email",
             "results is not yet ready",
@@ -292,17 +291,17 @@
             "error when executing failure post condition": "Configuration Error: Jenkins",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "BDBA Related Error",
-            "httperror: 401 - no permission": "Application Error: BDBA",
-            "httperror: 502 - invalid responses from another server/proxy.": "Connectivity Error: BDBA",
-            "httperror: 404 - nothing matches the given uri": "Application Error: BDBA",
+            "[bdba] [error] httperror: 401 - no permission": "Application Error: BDBA",
+            "[bdba] [error] httperror: 502 - invalid responses from another server/proxy.": "Connectivity Error: BDBA",
+            "[bdba] [error] httperror: 404 - nothing matches the given uri": "Application Error: BDBA",
+            "[bdba] [error] httperror: 503 - the server cannot process the request due to a high load": "Application Error: BDBA",
+            "urlerror: [errno 10054] an existing connection was forcibly closed": "Connectivity Error: BDBA",
             "urlerror: [errno 104] connection reset by peer": "Connectivity Error: BDBA",
             "binary scan failed to complete": "Connectivity Error: BDBA",
             "results is not yet ready": "Application Error: BDBA",
-            "scanning is failed": "Application Error: BDBA",
-            "httperror: 503 - the server cannot process the request due to a high load": "Application Error: BDBA",
+            "scanning failed": "Application Error: BDBA",
             "[errno 111] connection refused": "Connectivity Error: BDBA",
             "response got: unauthorized": "Connectivity Error: BDBA",
-            "urlerror: [errno 10054] an existing connection was forcibly closed": "Connectivity Error: BDBA",
             "hudson.AbortException: script returned exit code 1": "Connectivity Error: BDBA",
             "error is not recoverable: exiting now": "Application Error: BDBA",
             
