[SPLUNK] New error category introduced

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -65,7 +65,7 @@
             "java.io.ioexception",
             "java.lang.exception",
             "http error 404",
-            "this is a comment to segmentized common error type to be used for different error category - compilation error type",
+            "this is a comment to segmentized common error type to be used for different error category - Developer Error: Compilation type",
             "no rule to make target",
             "script returned exit code 1",
             "makefile:",
@@ -100,113 +100,113 @@
         
         "error_category": {
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Compilation Related Error",
-            "nmake : fatal error" : "Compilation Error",
-            "link : fatal error" : "Compilation Error",
-            "error while encapsulate fd image": "Compilation Error",
-            "error while add some named ffs file into the fd image file": "Compilation Error",
-            "must supply an action name and an arg list": "Compilation Error",
-            "class has no constructors": "Compilation Error",
-            "identifier not found": "Compilation Error",
-            "undeclared identifier": "Compilation Error",
-            "invalid target type for dynamic_cast": "Compilation Error",
-            "no certificate supplied in operation": "Compilation Error",
-            "certificate verify failed": "Compilation Error",
-            "signtool error: file not found": "Compilation Error",
-            "abi.error_handling.abi_exception.abiexception": "Compilation Error",
-            "package_write_rpm": "Compilation Error",
-            "requires: openvino": "Compilation Error",
-            "drivers/spi/spi-dw.h": "Compilation Error",
-            "thunderbay": "Compilation Error",
-            "mainline-tracking": "Compilation Error",
-            "error: cairo": "Compilation Error",
-            "cairo": "Compilation Error" ,
-            "do_populate_sdk": "Compilation Error",
-            "movisoc-fwu": "Compilation Error",
-            "oe_runmake": "Compilation Error",
-            "linux-ese-po-kernel": "Compilation Error",
-            "thb-lin-bsp-bd-dly": "Compilation Error",
-            "recipe tbh-vpual": "Compilation Error",
-            "do_image_wic":"Compilation Error" ,
-            "no dtb found": "Compilation Error",
-            "unable to fetch url from any source": "Compilation Error",
-            "/gpu/drm/": "Compilation Error",
-            "linux-intel-ese": "Compilation Error",
-            "iso-codes-4.2-r0": "Compilation Error",
-            "ore-image-ese-initramfs-base-1.0-r0": "Compilation Error",
-            "core-image-ese-initramfs-base": "Compilation Error",
-            "do_fetch": "Compilation Error",
-            "error: task": "Compilation Error",
-            "function failed: " : "Compilation Error",
-            "do_configure" : "Compilation Error",
-            "error: nothing rprovides" : "Compilation Error",
-            "error: required build" : "Compilation Error",
-            "merge conflict": "Compilation Error",
-            "core-image-ese-dev-1.0-r0 do_image_wic": "Compilation Error",
-            "following arguments are required": "Compilation Error",
-            "failed to load image": "Compilation Error" ,
-            "not recognized as an internal or external command": "Compilation Error" ,
-            "failed to build module": "Compilation Error" ,
-            "failed with exit code '1'": "Compilation Error" ,
-            "failed with exit code 1": "Compilation Error" ,
-            "exit code: 1": "Compilation Error",
-            "returned 1 exit status": "Compilation Error",
-            "failed to merge": "Compilation Error" ,
-            "error U1077": "Compilation Error" ,
-            "error 0004": "Compilation Error" ,
-            "error 1001": "Compilation Error" ,
-            "fsp build": "Compilation Error",
-            "bios build": "Compilation Error",
-            "error 7000": "Compilation Error",
-            "error 3000": "Compilation Error",
-            "cmake error": "Compilation Error",
-            "msb1009": "Compilation Error",
-            "no such file or directory": "Compilation Error",
-            "makefile:": "Compilation Error",
-            "prikey size is not same as pubkey": "Compilation Error",
-            "attestation server read": "Compilation Error",
-            "filenotfounderror:":"Compilation Error",
-            "command error": "Compilation Error",
-            "code of compile_tool": "Compilation Error",
-            "error: parseerror at": "Compilation Error",
-            "could not apply patch": "Compilation Error",
-            "patch does not apply": "Compilation Error",
-            "patchset is failed to be added": "Compilation Error",
-            "do_package_qa": "Compilation Error",
-            "unable to start bitbake server": "Compilation Error",
-            "the following layer directories do not exist": "Compilation Error",
-            "error: please check bblayers": "Compilation Error",
-            "error in running process": "Compilation Error",
-            "command not found": "Compilation Error",
-            "error 1": "Compilation Error",
-            "error 2": "Compilation Error",
-            "recipe for target": "Compilation Error",
-            "error: core-image-ese-dev-1.0-r0 do_rootfs": "Compilation Error",
-            "failed sanity test": "Compilation Error",
-            "qa staging was broken by the package built": "Compilation Error",
-            "fatal: manifest": "Compilation Error",
-            "build failed": "Compilation Error",
-            "no rule to make target": "Compilation Error",
-            "build stopped: subcommand failed": "Compilation Error",
-            "[drivers/misc/xlink-core/xlink.ko] undefined!": "Compilation Error",
-            "debug build: file does not exists!": "Compilation Error",
-            "error messages shown, returning a non-zero exit code": "Compilation Error",
-            "does not exist! Please check bblayers": "Compilation Error",
-            "error message shown, returning a non-zero exit code": "Compilation Error",
-            "integration for audio failed": "Compilation Error",
-            "script_error= 1": "Compilation Error",
-            "failed to build": "Compilation Error",
-            "hddlunite not found! skipping build of hddl extension": "Compilation Error",
-            "tar.gz: not found in archive": "Compilation Error",
-            "file/directory not found in workspace": "Compilation Error",
-            "not found in packages path": "Compilation Error",
-            "fatal: remote upstream already exists": "Compilation Error",
-            "patch failed": "Compilation Error",
-            "execution is failed (exit code: 1)": "Compilation Error",
-            "bsp build: failed": "Compilation Error",
-            "daily build: failed": "Compilation Error",
-            "traceback (most recent call last):": "Compilation Error",
-            "error 404: not found": "Compilation Error",
-            "http error 404 client error: not found for url": "Compilation Error",
+            "nmake : fatal error" : "Developer Error: Compilation",
+            "link : fatal error" : "Developer Error: Compilation",
+            "error while encapsulate fd image": "Developer Error: Compilation",
+            "error while add some named ffs file into the fd image file": "Developer Error: Compilation",
+            "must supply an action name and an arg list": "Developer Error: Compilation",
+            "class has no constructors": "Developer Error: Compilation",
+            "identifier not found": "Developer Error: Compilation",
+            "undeclared identifier": "Developer Error: Compilation",
+            "invalid target type for dynamic_cast": "Developer Error: Compilation",
+            "no certificate supplied in operation": "Developer Error: Compilation",
+            "certificate verify failed": "Developer Error: Compilation",
+            "signtool error: file not found": "Developer Error: Compilation",
+            "abi.error_handling.abi_exception.abiexception": "Developer Error: Compilation",
+            "package_write_rpm": "Developer Error: Compilation",
+            "requires: openvino": "Developer Error: Compilation",
+            "drivers/spi/spi-dw.h": "Developer Error: Compilation",
+            "thunderbay": "Developer Error: Compilation",
+            "mainline-tracking": "Developer Error: Compilation",
+            "error: cairo": "Developer Error: Compilation",
+            "cairo": "Developer Error: Compilation" ,
+            "do_populate_sdk": "Developer Error: Compilation",
+            "movisoc-fwu": "Developer Error: Compilation",
+            "oe_runmake": "Developer Error: Compilation",
+            "linux-ese-po-kernel": "Developer Error: Compilation",
+            "thb-lin-bsp-bd-dly": "Developer Error: Compilation",
+            "recipe tbh-vpual": "Developer Error: Compilation",
+            "do_image_wic":"Developer Error: Compilation" ,
+            "no dtb found": "Developer Error: Compilation",
+            "unable to fetch url from any source": "Developer Error: Compilation",
+            "/gpu/drm/": "Developer Error: Compilation",
+            "linux-intel-ese": "Developer Error: Compilation",
+            "iso-codes-4.2-r0": "Developer Error: Compilation",
+            "ore-image-ese-initramfs-base-1.0-r0": "Developer Error: Compilation",
+            "core-image-ese-initramfs-base": "Developer Error: Compilation",
+            "do_fetch": "Developer Error: Compilation",
+            "error: task": "Developer Error: Compilation",
+            "function failed: " : "Developer Error: Compilation",
+            "do_configure" : "Developer Error: Compilation",
+            "error: nothing rprovides" : "Developer Error: Compilation",
+            "error: required build" : "Developer Error: Compilation",
+            "merge conflict": "Developer Error: Compilation",
+            "core-image-ese-dev-1.0-r0 do_image_wic": "Developer Error: Compilation",
+            "following arguments are required": "Developer Error: Compilation",
+            "failed to load image": "Developer Error: Compilation" ,
+            "not recognized as an internal or external command": "Developer Error: Compilation" ,
+            "failed to build module": "Developer Error: Compilation" ,
+            "failed with exit code '1'": "Developer Error: Compilation" ,
+            "failed with exit code 1": "Developer Error: Compilation" ,
+            "exit code: 1": "Developer Error: Compilation",
+            "returned 1 exit status": "Developer Error: Compilation",
+            "failed to merge": "Developer Error: Compilation" ,
+            "error U1077": "Developer Error: Compilation" ,
+            "error 0004": "Developer Error: Compilation" ,
+            "error 1001": "Developer Error: Compilation" ,
+            "fsp build": "Developer Error: Compilation",
+            "bios build": "Developer Error: Compilation",
+            "error 7000": "Developer Error: Compilation",
+            "error 3000": "Developer Error: Compilation",
+            "cmake error": "Developer Error: Compilation",
+            "msb1009": "Developer Error: Compilation",
+            "no such file or directory": "Developer Error: Compilation",
+            "makefile:": "Developer Error: Compilation",
+            "prikey size is not same as pubkey": "Developer Error: Compilation",
+            "attestation server read": "Developer Error: Compilation",
+            "filenotfounderror:":"Developer Error: Compilation",
+            "command error": "Developer Error: Compilation",
+            "code of compile_tool": "Developer Error: Compilation",
+            "error: parseerror at": "Developer Error: Compilation",
+            "could not apply patch": "Developer Error: Compilation",
+            "patch does not apply": "Developer Error: Compilation",
+            "patchset is failed to be added": "Developer Error: Compilation",
+            "do_package_qa": "Developer Error: Compilation",
+            "unable to start bitbake server": "Developer Error: Compilation",
+            "the following layer directories do not exist": "Developer Error: Compilation",
+            "error: please check bblayers": "Developer Error: Compilation",
+            "error in running process": "Developer Error: Compilation",
+            "command not found": "Developer Error: Compilation",
+            "error 1": "Developer Error: Compilation",
+            "error 2": "Developer Error: Compilation",
+            "recipe for target": "Developer Error: Compilation",
+            "error: core-image-ese-dev-1.0-r0 do_rootfs": "Developer Error: Compilation",
+            "failed sanity test": "Developer Error: Compilation",
+            "qa staging was broken by the package built": "Developer Error: Compilation",
+            "fatal: manifest": "Developer Error: Compilation",
+            "build failed": "Developer Error: Compilation",
+            "no rule to make target": "Developer Error: Compilation",
+            "build stopped: subcommand failed": "Developer Error: Compilation",
+            "[drivers/misc/xlink-core/xlink.ko] undefined!": "Developer Error: Compilation",
+            "debug build: file does not exists!": "Developer Error: Compilation",
+            "error messages shown, returning a non-zero exit code": "Developer Error: Compilation",
+            "does not exist! Please check bblayers": "Developer Error: Compilation",
+            "error message shown, returning a non-zero exit code": "Developer Error: Compilation",
+            "integration for audio failed": "Developer Error: Compilation",
+            "script_error= 1": "Developer Error: Compilation",
+            "failed to build": "Developer Error: Compilation",
+            "hddlunite not found! skipping build of hddl extension": "Developer Error: Compilation",
+            "tar.gz: not found in archive": "Developer Error: Compilation",
+            "file/directory not found in workspace": "Developer Error: Compilation",
+            "not found in packages path": "Developer Error: Compilation",
+            "fatal: remote upstream already exists": "Developer Error: Compilation",
+            "patch failed": "Developer Error: Compilation",
+            "execution is failed (exit code: 1)": "Developer Error: Compilation",
+            "bsp build: failed": "Developer Error: Compilation",
+            "daily build: failed": "Developer Error: Compilation",
+            "traceback (most recent call last):": "Developer Error: Compilation",
+            "error 404: not found": "Developer Error: Compilation",
+            "http error 404 client error: not found for url": "Developer Error: Compilation",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Git Related Error",
             "gitlab error": "Application Error: Git",
@@ -331,7 +331,7 @@
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "HSDES Related Error",
             "keyerror:": "Application Error: HSDES",
             "fail to update hsdes field": "Application Error: HSDES",
-            "hsdes id is not given": "Configuration Error: HSDES",
+            "hsdes id is not given": "Developer Error: HSDES",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "ABI Related Error",
             "abi_warning:": "Application Error: ABI",
